added configuration for jwt in openapi config, added signup functionality, datainiti , signinreq , app user , user repo and customuserdetails for storing users in db instead of inmemory
