# backend/src/main/java/com/patientlookup/app/controller/AuthController.java
@@ -3,14 +3,19 @@ package com.patientlookup.app.controller;
 
 import com.patientlookup.app.dto.LoginRequest;
 import com.patientlookup.app.dto.LoginResponse;
+import com.patientlookup.app.dto.SignupRequest;
+import com.patientlookup.app.entity.AppUser;
+import com.patientlookup.app.repository.UserRepository;
 import com.patientlookup.app.security.JwtService;
 
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -20,11 +25,16 @@ public class AuthController {
     private final AuthenticationManager authenticationManager;
     private final UserDetailsService userDetailsService;
     private final JwtService jwtService;
+    private final PasswordEncoder passwordEncoder;
+    private final UserRepository userRepository;
 
-    public AuthController(AuthenticationManager authenticationManager, UserDetailsService userDetailsService, JwtService jwtService) {
+    public AuthController(AuthenticationManager authenticationManager, UserDetailsService userDetailsService, JwtService jwtService,
+                          PasswordEncoder passwordEncoder, UserRepository userRepository) {
         this.authenticationManager = authenticationManager;
         this.userDetailsService = userDetailsService;
         this.jwtService = jwtService;
+        this.passwordEncoder = passwordEncoder;
+        this.userRepository = userRepository;
     }
 
     @PostMapping("/login")
@@ -46,5 +56,25 @@ public class AuthController {
                 .replace("ROLE_", "");
 
         return new LoginResponse(token, userDetails.getUsername(),role);
+    }
+
+    @PostMapping("/signup")
+    public ResponseEntity<?> signup(
+            @RequestBody SignupRequest request) {
+
+        if (userRepository.existsByUsername(request.username())) {
+            return ResponseEntity
+                    .badRequest()
+                    .body("Username already exists");
+        }
+
+        AppUser user = new AppUser();
+        user.setUsername(request.username());
+        user.setPassword(passwordEncoder.encode(request.password()));
+        user.setRole("EMPLOYEE");
+
+        userRepository.save(user);
+
+        return ResponseEntity.ok("User registered successfully");
     }
 }
